// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders IncomingCall without crashing 1`] = `
<body>
  <div>
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <article
      aria-labelledby="rcx-media-call-widget-title rcx-media-call-widget-caller-info"
      class="rcx-css-155a7q5"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1aw4sw4 rcx-css-11m6c1h"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-stacked-meatballs rcx-icon rcx-css-4pvxx3"
        >
          
        </i>
      </div>
      <header
        class="rcx-box rcx-box--full rcx-css-4vvilp"
      >
        <h3
          class="rcx-box rcx-box--full rcx-css-u3j01s"
          id="rcx-media-call-widget-title"
        >
          Incoming Call...
        </h3>
        <div
          class="rcx-box rcx-box--full rcx-css-ws1yyr"
        >
          <button
            aria-label="customize"
            class="rcx-box rcx-box--full rcx-button--tiny-square rcx-button--square rcx-button--icon rcx-button"
            disabled=""
            label="customize"
            title="Device_settings_not_supported_by_browser"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-customize rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
        </div>
      </header>
      <section
        class="rcx-box rcx-box--full rcx-css-1mjdwp7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-omrq7i"
          id="rcx-media-call-widget-caller-info"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-1rtu0k9"
          >
            <figure
              class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x20"
            >
              <img
                alt=""
                class="rcx-avatar__element rcx-avatar__element--x20"
                src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwgJC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCAAoACgDASIAAhEBAxEB/8QAGwAAAgIDAQAAAAAAAAAAAAAAAAcEBgIDBQj/xAAuEAACAQQAAwcEAQUAAAAAAAABAgMABAUREiExBhMUIkFRYQcWcYGhFTJSgpH/xAAYAQADAQEAAAAAAAAAAAAAAAACAwQBAP/EAB4RAAIBBQEBAQAAAAAAAAAAAAABAgMREiExE0HR/9oADAMBAAIRAxEAPwBuXuIkhBuMe5ib/AHQP49q4L3mLitryTLTSpOiHQI5k/HzXa/qbFOEudVTu1dumWvcTaNCZYZ7vU6g6LxqjOU/24dfs1Ouh9FnkMpd3Reeyx83hAxZZEhkdV9/MBrX71WGPvJcqrJBGveKATtuXXqNU0pu02bTHXD/AGvJAluyxxRd6F4x00o+NdKoVrjbzJdvVe1t5cVLc2ck8qjnohgpPtz2v7G6JtPQ2VJwjlcw+37mchpnK6GtIuv5NFWeTsLNPvxWTvpfjvOEfwKKzEVkSct2vscS/BIzSN0YRkeX81UpPqO8masJETu7OOccY4dswYFQeftv096XV5knuJGdm2T1+agvMXj8jEaHX905QihabvcbuS7X566mLWLwSY8PuRnk/u4eZ0deTl71Ef6hY+0yM88TzeNZY4luYwpVYyduOfrvhPTnr0pXSX9y5mCsyJMdyxxvwq599em+taItqCSNc90ChvZRUruUcT0JiO18Elpk7t8v41LWzacxkBSuvjQ/FFJayjDWrCTepAQ2vUH0oo/Jk3ovpwJJeVCP5CN+lFFaaMqy+nAyuChvrTI2kN9JAsi2ZOy4IBHMnkSCP+iqBexSWdxLazoUljJVlPUH2oorkV10pRc7b1zXb/hZOzuJvM86QWEXeELxOzHSIPcmiiiunVlF2RNTpRkrs//Z"
              />
            </figure>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-css-jgzlgu"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1jbbtow"
            >
              <span
                class="rcx-box rcx-box--full rcx-css-ilfe77"
              >
                <svg
                  class="rcx-status-bullet rcx-status-bullet--online undefined rcx-status-bullet--small"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 12.0001C24 18.6275 18.6274 24.0001 12 24.0001C5.37255 24.0001 -3.05176e-05 18.6275 -3.05176e-05 12.0001C-3.05176e-05 5.37271 5.37255 0.00012207 12 0.00012207C18.6274 0.00012207 24 5.37271 24 12.0001Z"
                  />
                </svg>
                <div
                  class="rcx-box rcx-box--full rcx-css-nc7kyx"
                >
                  John Doe
                </div>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1m7ucy6"
            >
              1234567890
            </div>
          </div>
        </div>
      </section>
      <footer
        class="rcx-box rcx-box--full rcx-css-itk7e7"
      >
        <div
          class="rcx-button-group rcx-button-group--stretch rcx-button-group--align-start"
          role="group"
        >
          <button
            class="rcx-box rcx-box--full rcx-button--medium rcx-button--danger rcx-button rcx-button-group__item rcx-css-t3n91h"
            name="phone"
            type="button"
          >
            <span
              class="rcx-button--content"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone-off rcx-icon rcx-css-1hdf9ok"
              >
                
              </i>
              Reject
            </span>
          </button>
          <button
            class="rcx-box rcx-box--full rcx-button--medium rcx-button--success rcx-button rcx-button-group__item rcx-css-t3n91h"
            name="phone"
            type="button"
          >
            <span
              class="rcx-button--content"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone rcx-icon rcx-css-1hdf9ok"
              >
                
              </i>
              Accept
            </span>
          </button>
        </div>
      </footer>
    </article>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
</body>
`;

exports[`renders IncomingCallTransfer without crashing 1`] = `
<body>
  <div>
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <article
      aria-labelledby="rcx-media-call-widget-title rcx-media-call-widget-caller-info"
      class="rcx-css-155a7q5"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1aw4sw4 rcx-css-11m6c1h"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-stacked-meatballs rcx-icon rcx-css-4pvxx3"
        >
          
        </i>
      </div>
      <header
        class="rcx-box rcx-box--full rcx-css-4vvilp"
      >
        <h3
          class="rcx-box rcx-box--full rcx-css-u3j01s"
          id="rcx-media-call-widget-title"
        >
          Transferring_call_incoming...
        </h3>
        <div
          class="rcx-box rcx-box--full rcx-css-ws1yyr"
        >
          <button
            aria-label="customize"
            class="rcx-box rcx-box--full rcx-button--tiny-square rcx-button--square rcx-button--icon rcx-button"
            disabled=""
            label="customize"
            title="Device_settings_not_supported_by_browser"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-customize rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
        </div>
      </header>
      <span
        class="rcx-box rcx-box--full rcx-css-65g3x"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-1gd28qh"
        >
           
          Transferring_call_incoming__from_
        </div>
      </span>
      <section
        class="rcx-box rcx-box--full rcx-css-1mjdwp7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-omrq7i"
          id="rcx-media-call-widget-caller-info"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-1rtu0k9"
          >
            <figure
              class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x20"
            >
              <img
                alt=""
                class="rcx-avatar__element rcx-avatar__element--x20"
                src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwgJC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCAAoACgDASIAAhEBAxEB/8QAGwAAAgIDAQAAAAAAAAAAAAAAAAcEBgIDBQj/xAAuEAACAQQAAwcEAQUAAAAAAAABAgMABAUREiExBhMUIkFRYQcWcYGhFTJSgpH/xAAYAQADAQEAAAAAAAAAAAAAAAACAwQBAP/EAB4RAAIBBQEBAQAAAAAAAAAAAAABAgMREiExE0HR/9oADAMBAAIRAxEAPwBuXuIkhBuMe5ib/AHQP49q4L3mLitryTLTSpOiHQI5k/HzXa/qbFOEudVTu1dumWvcTaNCZYZ7vU6g6LxqjOU/24dfs1Ouh9FnkMpd3Reeyx83hAxZZEhkdV9/MBrX71WGPvJcqrJBGveKATtuXXqNU0pu02bTHXD/AGvJAluyxxRd6F4x00o+NdKoVrjbzJdvVe1t5cVLc2ck8qjnohgpPtz2v7G6JtPQ2VJwjlcw+37mchpnK6GtIuv5NFWeTsLNPvxWTvpfjvOEfwKKzEVkSct2vscS/BIzSN0YRkeX81UpPqO8masJETu7OOccY4dswYFQeftv096XV5knuJGdm2T1+agvMXj8jEaHX905QihabvcbuS7X566mLWLwSY8PuRnk/u4eZ0deTl71Ef6hY+0yM88TzeNZY4luYwpVYyduOfrvhPTnr0pXSX9y5mCsyJMdyxxvwq599em+taItqCSNc90ChvZRUruUcT0JiO18Elpk7t8v41LWzacxkBSuvjQ/FFJayjDWrCTepAQ2vUH0oo/Jk3ovpwJJeVCP5CN+lFFaaMqy+nAyuChvrTI2kN9JAsi2ZOy4IBHMnkSCP+iqBexSWdxLazoUljJVlPUH2oorkV10pRc7b1zXb/hZOzuJvM86QWEXeELxOzHSIPcmiiiunVlF2RNTpRkrs//Z"
              />
            </figure>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-css-jgzlgu"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1jbbtow"
            >
              <span
                class="rcx-box rcx-box--full rcx-css-ilfe77"
              >
                <svg
                  class="rcx-status-bullet rcx-status-bullet--online undefined rcx-status-bullet--small"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 12.0001C24 18.6275 18.6274 24.0001 12 24.0001C5.37255 24.0001 -3.05176e-05 18.6275 -3.05176e-05 12.0001C-3.05176e-05 5.37271 5.37255 0.00012207 12 0.00012207C18.6274 0.00012207 24 5.37271 24 12.0001Z"
                  />
                </svg>
                <div
                  class="rcx-box rcx-box--full rcx-css-nc7kyx"
                >
                  John Doe
                </div>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1m7ucy6"
            >
              1234567890
            </div>
          </div>
        </div>
      </section>
      <footer
        class="rcx-box rcx-box--full rcx-css-itk7e7"
      >
        <div
          class="rcx-button-group rcx-button-group--stretch rcx-button-group--align-start"
          role="group"
        >
          <button
            class="rcx-box rcx-box--full rcx-button--medium rcx-button--danger rcx-button rcx-button-group__item rcx-css-t3n91h"
            name="phone"
            type="button"
          >
            <span
              class="rcx-button--content"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone-off rcx-icon rcx-css-1hdf9ok"
              >
                
              </i>
              Reject
            </span>
          </button>
          <button
            class="rcx-box rcx-box--full rcx-button--medium rcx-button--success rcx-button rcx-button-group__item rcx-css-t3n91h"
            name="phone"
            type="button"
          >
            <span
              class="rcx-button--content"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone rcx-icon rcx-css-1hdf9ok"
              >
                
              </i>
              Accept
            </span>
          </button>
        </div>
      </footer>
    </article>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
</body>
`;

exports[`renders MediaCallWidgetManualTesting without crashing 1`] = `
<body>
  <div>
    <button
      class="rcx-box rcx-box--full rcx-button rcx-css-1rtu0k9"
      type="button"
    >
      <span
        class="rcx-button--content"
      >
        Toggle widget
      </span>
    </button>
    <button
      class="rcx-box rcx-box--full rcx-button"
      type="button"
    >
      <span
        class="rcx-button--content"
      >
        Receive call
      </span>
    </button>
  </div>
</body>
`;

exports[`renders NewCall without crashing 1`] = `
<body>
  <div>
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <article
      aria-labelledby="rcx-media-call-widget-title rcx-media-call-widget-caller-info"
      class="rcx-css-155a7q5"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1aw4sw4 rcx-css-11m6c1h"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-stacked-meatballs rcx-icon rcx-css-4pvxx3"
        >
          
        </i>
      </div>
      <header
        class="rcx-box rcx-box--full rcx-css-4vvilp"
      >
        <h3
          class="rcx-box rcx-box--full rcx-css-u3j01s"
          id="rcx-media-call-widget-title"
        >
          New_call
        </h3>
        <div
          class="rcx-box rcx-box--full rcx-css-ws1yyr"
        >
          <button
            aria-label="Close"
            class="rcx-box rcx-box--full rcx-button--tiny-square rcx-button--square rcx-button--icon rcx-button"
            label="Close"
            title="Close"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
        </div>
      </header>
      <section
        class="rcx-box rcx-box--full rcx-css-1mjdwp7"
      >
        <div
          class="rcx-box rcx-box--full rcx-field rcx-css-toq36"
        >
          <span
            class="rcx-box rcx-box--full rcx-field__row"
          >
            <div
              class="rcx-box rcx-box--full rcx-autocomplete rcx-css-t3n91h"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-6d871f"
                role="group"
              >
                <input
                  aria-invalid="false"
                  aria-labelledby=":r0:"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box rcx-css-trljwa rcx-css-rcil7k"
                  value=""
                />
              </div>
              <div
                class="rcx-box rcx-box--full rcx-autocomplete__addon"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-magnifier rcx-icon rcx-css-1wz6xj9"
                >
                  
                </i>
              </div>
            </div>
          </span>
          <span
            class="rcx-box rcx-box--full rcx-field__description"
            id=":r0:"
          >
            Enter username or number
          </span>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-css-cnkcl9"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-omrq7i"
            id="rcx-media-call-widget-caller-info"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1rtu0k9"
            >
              <figure
                class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x20"
              >
                <img
                  alt=""
                  class="rcx-avatar__element rcx-avatar__element--x20"
                  src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwgJC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCAAoACgDASIAAhEBAxEB/8QAGwAAAgIDAQAAAAAAAAAAAAAAAAcEBgIDBQj/xAAuEAACAQQAAwcEAQUAAAAAAAABAgMABAUREiExBhMUIkFRYQcWcYGhFTJSgpH/xAAYAQADAQEAAAAAAAAAAAAAAAACAwQBAP/EAB4RAAIBBQEBAQAAAAAAAAAAAAABAgMREiExE0HR/9oADAMBAAIRAxEAPwBuXuIkhBuMe5ib/AHQP49q4L3mLitryTLTSpOiHQI5k/HzXa/qbFOEudVTu1dumWvcTaNCZYZ7vU6g6LxqjOU/24dfs1Ouh9FnkMpd3Reeyx83hAxZZEhkdV9/MBrX71WGPvJcqrJBGveKATtuXXqNU0pu02bTHXD/AGvJAluyxxRd6F4x00o+NdKoVrjbzJdvVe1t5cVLc2ck8qjnohgpPtz2v7G6JtPQ2VJwjlcw+37mchpnK6GtIuv5NFWeTsLNPvxWTvpfjvOEfwKKzEVkSct2vscS/BIzSN0YRkeX81UpPqO8masJETu7OOccY4dswYFQeftv096XV5knuJGdm2T1+agvMXj8jEaHX905QihabvcbuS7X566mLWLwSY8PuRnk/u4eZ0deTl71Ef6hY+0yM88TzeNZY4luYwpVYyduOfrvhPTnr0pXSX9y5mCsyJMdyxxvwq599em+taItqCSNc90ChvZRUruUcT0JiO18Elpk7t8v41LWzacxkBSuvjQ/FFJayjDWrCTepAQ2vUH0oo/Jk3ovpwJJeVCP5CN+lFFaaMqy+nAyuChvrTI2kN9JAsi2ZOy4IBHMnkSCP+iqBexSWdxLazoUljJVlPUH2oorkV10pRc7b1zXb/hZOzuJvM86QWEXeELxOzHSIPcmiiiunVlF2RNTpRkrs//Z"
                />
              </figure>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-jgzlgu"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1jbbtow"
              >
                <span
                  class="rcx-box rcx-box--full rcx-css-ilfe77"
                >
                  <svg
                    class="rcx-status-bullet rcx-status-bullet--online undefined rcx-status-bullet--small"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 12.0001C24 18.6275 18.6274 24.0001 12 24.0001C5.37255 24.0001 -3.05176e-05 18.6275 -3.05176e-05 12.0001C-3.05176e-05 5.37271 5.37255 0.00012207 12 0.00012207C18.6274 0.00012207 24 5.37271 24 12.0001Z"
                    />
                  </svg>
                  <div
                    class="rcx-box rcx-box--full rcx-css-nc7kyx"
                  >
                    John Doe
                  </div>
                </span>
              </div>
              <div
                class="rcx-box rcx-box--full rcx-css-1m7ucy6"
              >
                1234567890
              </div>
            </div>
          </div>
        </div>
      </section>
      <footer
        class="rcx-box rcx-box--full rcx-css-itk7e7"
      >
        <div
          class="rcx-button-group rcx-button-group--stretch rcx-button-group--align-start"
          role="group"
        >
          <button
            aria-label="customize"
            class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button"
            disabled=""
            label="customize"
            title="Device_settings_not_supported_by_browser"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-customize rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
          <button
            class="rcx-box rcx-box--full rcx-button--medium rcx-button--success rcx-button rcx-button-group__item rcx-css-t3n91h"
            type="button"
          >
            <span
              class="rcx-button--content"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone rcx-icon rcx-css-1hdf9ok"
              >
                
              </i>
              Call
            </span>
          </button>
        </div>
      </footer>
    </article>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
</body>
`;

exports[`renders OngoingCall without crashing 1`] = `
<body>
  <div>
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <article
      aria-labelledby="rcx-media-call-widget-title rcx-media-call-widget-caller-info"
      class="rcx-css-155a7q5"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1aw4sw4 rcx-css-11m6c1h"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-stacked-meatballs rcx-icon rcx-css-4pvxx3"
        >
          
        </i>
      </div>
      <header
        class="rcx-box rcx-box--full rcx-css-4vvilp"
      >
        <h3
          class="rcx-box rcx-box--full rcx-css-u3j01s"
          id="rcx-media-call-widget-title"
        >
          <time
            datetime="PT0H0M0S"
          >
            00
            :
            00
          </time>
        </h3>
        <div
          class="rcx-box rcx-box--full rcx-css-ws1yyr"
        >
          <button
            aria-label="customize"
            class="rcx-box rcx-box--full rcx-button--tiny-square rcx-button--square rcx-button--icon rcx-button"
            disabled=""
            label="customize"
            title="Device_settings_not_supported_by_browser"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-customize rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
        </div>
      </header>
      <section
        class="rcx-box rcx-box--full rcx-css-1mjdwp7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-omrq7i"
          id="rcx-media-call-widget-caller-info"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-1rtu0k9"
          >
            <figure
              class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x20"
            >
              <img
                alt=""
                class="rcx-avatar__element rcx-avatar__element--x20"
                src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwgJC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCAAoACgDASIAAhEBAxEB/8QAGwAAAgIDAQAAAAAAAAAAAAAAAAcEBgIDBQj/xAAuEAACAQQAAwcEAQUAAAAAAAABAgMABAUREiExBhMUIkFRYQcWcYGhFTJSgpH/xAAYAQADAQEAAAAAAAAAAAAAAAACAwQBAP/EAB4RAAIBBQEBAQAAAAAAAAAAAAABAgMREiExE0HR/9oADAMBAAIRAxEAPwBuXuIkhBuMe5ib/AHQP49q4L3mLitryTLTSpOiHQI5k/HzXa/qbFOEudVTu1dumWvcTaNCZYZ7vU6g6LxqjOU/24dfs1Ouh9FnkMpd3Reeyx83hAxZZEhkdV9/MBrX71WGPvJcqrJBGveKATtuXXqNU0pu02bTHXD/AGvJAluyxxRd6F4x00o+NdKoVrjbzJdvVe1t5cVLc2ck8qjnohgpPtz2v7G6JtPQ2VJwjlcw+37mchpnK6GtIuv5NFWeTsLNPvxWTvpfjvOEfwKKzEVkSct2vscS/BIzSN0YRkeX81UpPqO8masJETu7OOccY4dswYFQeftv096XV5knuJGdm2T1+agvMXj8jEaHX905QihabvcbuS7X566mLWLwSY8PuRnk/u4eZ0deTl71Ef6hY+0yM88TzeNZY4luYwpVYyduOfrvhPTnr0pXSX9y5mCsyJMdyxxvwq599em+taItqCSNc90ChvZRUruUcT0JiO18Elpk7t8v41LWzacxkBSuvjQ/FFJayjDWrCTepAQ2vUH0oo/Jk3ovpwJJeVCP5CN+lFFaaMqy+nAyuChvrTI2kN9JAsi2ZOy4IBHMnkSCP+iqBexSWdxLazoUljJVlPUH2oorkV10pRc7b1zXb/hZOzuJvM86QWEXeELxOzHSIPcmiiiunVlF2RNTpRkrs//Z"
              />
            </figure>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-css-jgzlgu"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1jbbtow"
            >
              <span
                class="rcx-box rcx-box--full rcx-css-ilfe77"
              >
                <svg
                  class="rcx-status-bullet rcx-status-bullet--online undefined rcx-status-bullet--small"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 12.0001C24 18.6275 18.6274 24.0001 12 24.0001C5.37255 24.0001 -3.05176e-05 18.6275 -3.05176e-05 12.0001C-3.05176e-05 5.37271 5.37255 0.00012207 12 0.00012207C18.6274 0.00012207 24 5.37271 24 12.0001Z"
                  />
                </svg>
                <div
                  class="rcx-box rcx-box--full rcx-css-nc7kyx"
                >
                  John Doe
                </div>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1m7ucy6"
            >
              1234567890
            </div>
          </div>
        </div>
      </section>
      <footer
        class="rcx-box rcx-box--full rcx-css-itk7e7"
      >
        <div
          class="rcx-button-group rcx-button-group--align-start rcx-button-group--large"
          role="group"
        >
          <button
            aria-label="Dialpad"
            class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
            label="Dialpad"
            title="Open_dialpad"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-dialpad rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
          <button
            aria-label="Mute"
            class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
            label="Mute"
            title="Mute"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-mic rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
          <button
            aria-label="Hold"
            class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
            label="Hold"
            title="Hold"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-pause-shape-unfilled rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
          <button
            aria-label="Forward"
            class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
            label="Forward"
            title="Forward"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-arrow-forward rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
          <button
            aria-label="Voice_call__user__hangup"
            class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary-danger rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
            label="Voice_call__user__hangup"
            title="Voice_call__user__hangup"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-phone-off rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
        </div>
      </footer>
    </article>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
</body>
`;

exports[`renders OutgoingCall without crashing 1`] = `
<body>
  <div>
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <article
      aria-labelledby="rcx-media-call-widget-title rcx-media-call-widget-caller-info"
      class="rcx-css-155a7q5"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1aw4sw4 rcx-css-11m6c1h"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-stacked-meatballs rcx-icon rcx-css-4pvxx3"
        >
          
        </i>
      </div>
      <header
        class="rcx-box rcx-box--full rcx-css-4vvilp"
      >
        <h3
          class="rcx-box rcx-box--full rcx-css-u3j01s"
          id="rcx-media-call-widget-title"
        >
          Calling...
        </h3>
        <div
          class="rcx-box rcx-box--full rcx-css-ws1yyr"
        >
          <button
            aria-label="customize"
            class="rcx-box rcx-box--full rcx-button--tiny-square rcx-button--square rcx-button--icon rcx-button"
            disabled=""
            label="customize"
            title="Device_settings_not_supported_by_browser"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-customize rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
        </div>
      </header>
      <section
        class="rcx-box rcx-box--full rcx-css-1mjdwp7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-omrq7i"
          id="rcx-media-call-widget-caller-info"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-1rtu0k9"
          >
            <figure
              class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x20"
            >
              <img
                alt=""
                class="rcx-avatar__element rcx-avatar__element--x20"
                src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwgJC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCAAoACgDASIAAhEBAxEB/8QAGwAAAgIDAQAAAAAAAAAAAAAAAAcEBgIDBQj/xAAuEAACAQQAAwcEAQUAAAAAAAABAgMABAUREiExBhMUIkFRYQcWcYGhFTJSgpH/xAAYAQADAQEAAAAAAAAAAAAAAAACAwQBAP/EAB4RAAIBBQEBAQAAAAAAAAAAAAABAgMREiExE0HR/9oADAMBAAIRAxEAPwBuXuIkhBuMe5ib/AHQP49q4L3mLitryTLTSpOiHQI5k/HzXa/qbFOEudVTu1dumWvcTaNCZYZ7vU6g6LxqjOU/24dfs1Ouh9FnkMpd3Reeyx83hAxZZEhkdV9/MBrX71WGPvJcqrJBGveKATtuXXqNU0pu02bTHXD/AGvJAluyxxRd6F4x00o+NdKoVrjbzJdvVe1t5cVLc2ck8qjnohgpPtz2v7G6JtPQ2VJwjlcw+37mchpnK6GtIuv5NFWeTsLNPvxWTvpfjvOEfwKKzEVkSct2vscS/BIzSN0YRkeX81UpPqO8masJETu7OOccY4dswYFQeftv096XV5knuJGdm2T1+agvMXj8jEaHX905QihabvcbuS7X566mLWLwSY8PuRnk/u4eZ0deTl71Ef6hY+0yM88TzeNZY4luYwpVYyduOfrvhPTnr0pXSX9y5mCsyJMdyxxvwq599em+taItqCSNc90ChvZRUruUcT0JiO18Elpk7t8v41LWzacxkBSuvjQ/FFJayjDWrCTepAQ2vUH0oo/Jk3ovpwJJeVCP5CN+lFFaaMqy+nAyuChvrTI2kN9JAsi2ZOy4IBHMnkSCP+iqBexSWdxLazoUljJVlPUH2oorkV10pRc7b1zXb/hZOzuJvM86QWEXeELxOzHSIPcmiiiunVlF2RNTpRkrs//Z"
              />
            </figure>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-css-jgzlgu"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1jbbtow"
            >
              <span
                class="rcx-box rcx-box--full rcx-css-ilfe77"
              >
                <svg
                  class="rcx-status-bullet rcx-status-bullet--online undefined rcx-status-bullet--small"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 12.0001C24 18.6275 18.6274 24.0001 12 24.0001C5.37255 24.0001 -3.05176e-05 18.6275 -3.05176e-05 12.0001C-3.05176e-05 5.37271 5.37255 0.00012207 12 0.00012207C18.6274 0.00012207 24 5.37271 24 12.0001Z"
                  />
                </svg>
                <div
                  class="rcx-box rcx-box--full rcx-css-nc7kyx"
                >
                  John Doe
                </div>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1m7ucy6"
            >
              1234567890
            </div>
          </div>
        </div>
      </section>
      <footer
        class="rcx-box rcx-box--full rcx-css-itk7e7"
      >
        <div
          class="rcx-button-group rcx-button-group--stretch rcx-button-group--align-start"
          role="group"
        >
          <button
            class="rcx-box rcx-box--full rcx-button--medium rcx-button--danger rcx-button rcx-button-group__item rcx-css-t3n91h"
            name="phone"
            type="button"
          >
            <span
              class="rcx-button--content"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone-off rcx-icon rcx-css-1hdf9ok"
              >
                
              </i>
              Cancel
            </span>
          </button>
        </div>
      </footer>
    </article>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
</body>
`;

exports[`renders OutgoingCallTransfer without crashing 1`] = `
<body>
  <div>
    <span
      data-focus-scope-start="true"
      hidden=""
    />
    <article
      aria-labelledby="rcx-media-call-widget-title rcx-media-call-widget-caller-info"
      class="rcx-css-155a7q5"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1aw4sw4 rcx-css-11m6c1h"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-stacked-meatballs rcx-icon rcx-css-4pvxx3"
        >
          
        </i>
      </div>
      <header
        class="rcx-box rcx-box--full rcx-css-4vvilp"
      >
        <h3
          class="rcx-box rcx-box--full rcx-css-u3j01s"
          id="rcx-media-call-widget-title"
        >
          Transferring_call...
        </h3>
        <div
          class="rcx-box rcx-box--full rcx-css-ws1yyr"
        >
          <button
            aria-label="customize"
            class="rcx-box rcx-box--full rcx-button--tiny-square rcx-button--square rcx-button--icon rcx-button"
            disabled=""
            label="customize"
            title="Device_settings_not_supported_by_browser"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-customize rcx-icon rcx-css-xb06ut"
            >
              
            </i>
          </button>
        </div>
      </header>
      <span
        class="rcx-box rcx-box--full rcx-css-65g3x"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-1gd28qh"
        >
           
          Transferred_call__from__to
        </div>
      </span>
      <section
        class="rcx-box rcx-box--full rcx-css-1mjdwp7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-omrq7i"
          id="rcx-media-call-widget-caller-info"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-1rtu0k9"
          >
            <figure
              class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x20"
            >
              <img
                alt=""
                class="rcx-avatar__element rcx-avatar__element--x20"
                src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwgJC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCAAoACgDASIAAhEBAxEB/8QAGwAAAgIDAQAAAAAAAAAAAAAAAAcEBgIDBQj/xAAuEAACAQQAAwcEAQUAAAAAAAABAgMABAUREiExBhMUIkFRYQcWcYGhFTJSgpH/xAAYAQADAQEAAAAAAAAAAAAAAAACAwQBAP/EAB4RAAIBBQEBAQAAAAAAAAAAAAABAgMREiExE0HR/9oADAMBAAIRAxEAPwBuXuIkhBuMe5ib/AHQP49q4L3mLitryTLTSpOiHQI5k/HzXa/qbFOEudVTu1dumWvcTaNCZYZ7vU6g6LxqjOU/24dfs1Ouh9FnkMpd3Reeyx83hAxZZEhkdV9/MBrX71WGPvJcqrJBGveKATtuXXqNU0pu02bTHXD/AGvJAluyxxRd6F4x00o+NdKoVrjbzJdvVe1t5cVLc2ck8qjnohgpPtz2v7G6JtPQ2VJwjlcw+37mchpnK6GtIuv5NFWeTsLNPvxWTvpfjvOEfwKKzEVkSct2vscS/BIzSN0YRkeX81UpPqO8masJETu7OOccY4dswYFQeftv096XV5knuJGdm2T1+agvMXj8jEaHX905QihabvcbuS7X566mLWLwSY8PuRnk/u4eZ0deTl71Ef6hY+0yM88TzeNZY4luYwpVYyduOfrvhPTnr0pXSX9y5mCsyJMdyxxvwq599em+taItqCSNc90ChvZRUruUcT0JiO18Elpk7t8v41LWzacxkBSuvjQ/FFJayjDWrCTepAQ2vUH0oo/Jk3ovpwJJeVCP5CN+lFFaaMqy+nAyuChvrTI2kN9JAsi2ZOy4IBHMnkSCP+iqBexSWdxLazoUljJVlPUH2oorkV10pRc7b1zXb/hZOzuJvM86QWEXeELxOzHSIPcmiiiunVlF2RNTpRkrs//Z"
              />
            </figure>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-css-jgzlgu"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1jbbtow"
            >
              <span
                class="rcx-box rcx-box--full rcx-css-ilfe77"
              >
                <svg
                  class="rcx-status-bullet rcx-status-bullet--online undefined rcx-status-bullet--small"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 12.0001C24 18.6275 18.6274 24.0001 12 24.0001C5.37255 24.0001 -3.05176e-05 18.6275 -3.05176e-05 12.0001C-3.05176e-05 5.37271 5.37255 0.00012207 12 0.00012207C18.6274 0.00012207 24 5.37271 24 12.0001Z"
                  />
                </svg>
                <div
                  class="rcx-box rcx-box--full rcx-css-nc7kyx"
                >
                  John Doe
                </div>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1m7ucy6"
            >
              1234567890
            </div>
          </div>
        </div>
      </section>
      <footer
        class="rcx-box rcx-box--full rcx-css-itk7e7"
      >
        <div
          class="rcx-button-group rcx-button-group--stretch rcx-button-group--align-start"
          role="group"
        >
          <button
            class="rcx-box rcx-box--full rcx-button--medium rcx-button--danger rcx-button rcx-button-group__item rcx-css-t3n91h"
            name="phone"
            type="button"
          >
            <span
              class="rcx-button--content"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone-off rcx-icon rcx-css-1hdf9ok"
              >
                
              </i>
              Cancel
            </span>
          </button>
        </div>
      </footer>
    </article>
    <span
      data-focus-scope-end="true"
      hidden=""
    />
  </div>
</body>
`;
